--- a/index.html
+++ b/index.html
@@ -64,42 +64,45 @@
       <li data-anime="scroll-up">
         <img src="icons/icon-balance.png" alt="icon">
         <h1 class="font-poppins cor-4">Previdenciário</h1>
-        <p class="font-poppins cor-0 ">Aposentadoria Por Tempo de Serviço</p>
-        <p class="font-poppins cor-0 ">Auxílio Doença</p>
-        <p class="font-poppins cor-0">Aposentadoria por Idade</p>
-        <p class="font-poppins cor-0">Aposentadoria Rural Loas/BPC</p>
+        <p class="font-poppins cor-0 ">Aposentadoria Urbana e Rural</p>
+        <p class="font-poppins cor-0 ">Auxílio por incapacidade temporária e permanente</p>
+        <p class="font-poppins cor-0">Pensão por morte</p>
+        <p class="font-poppins cor-0">BPC\LOAS</p>
+        <p class="font-poppins cor-0">Salário-Maternidade</p>
       </li>
       <li data-anime="scroll-up">
         <img src="icons/icon-balance.png" alt="icon">
         <h1 class="font-poppins cor-4">Criminal</h1>
-        <p class="font-poppins cor-0 ">Flagrante delito</p>
-        <p class="font-poppins cor-0 ">Audiência de custódia</p>
-        <p class="font-poppins cor-0">Inquérito policial</p>
-        <p class="font-poppins cor-0">Transação Penal e Suspensão Condicional do Processo</p>
+        <p class="font-poppins cor-0 ">Defesas em Plenário do Tribunal do Júri</p>
+        <p class="font-poppins cor-0 ">Flagrantes</p>
+        <p class="font-poppins cor-0">Audiência de Custódia</p>
+        <p class="font-poppins cor-0">Atuação em Tribunais Superiores</p>
+        <p class="font-poppins cor-0">Inquérito Policial</p>
+        <p class="font-poppins cor-0">Defesa em ações penais</p>
       </li>
       <li data-anime="scroll-up">
         <img src="icons/icon-balance.png" alt="icon">
-        <h1 class="font-poppins cor-4">Inventário e Herança</h1>
-        <p class="font-poppins cor-0 ">Divisão entre os Herdeiros</p>
-        <p class="font-poppins cor-0 ">Solução de Conflitos</p>
-        <p class="font-poppins cor-0">Regularização dos Documentos</p>
-        <p class="font-poppins cor-0">Valorização dos Bens na Hora da Venda</p>
+        <h1 class="font-poppins cor-4">Civil</h1>
+        <p class="font-poppins cor-0 ">Inventário e partilha</p>
+        <p class="font-poppins cor-0 ">Direito de Família</p>
+        <p class="font-poppins cor-0">Responsabilidade Civil</p>
+        <p class="font-poppins cor-0">Contratos</p>
       </li>
       <li data-anime="scroll-up">
         <img src="icons/icon-balance.png" alt="icon">
         <h1 class="font-poppins cor-4">Trabalhista</h1>
-        <p class="font-poppins cor-0 ">Trabalho sem Registro</p>
-        <p class="font-poppins cor-0 ">Dano Moral e Material</p>
-        <p class="font-poppins cor-0">Insalubridade/Periculosidade</p>
-        <p class="font-poppins cor-0">Acidente de Trabalho</p>
+        <p class="font-poppins cor-0 ">Mediação e Conciliação</p>
+        <p class="font-poppins cor-0 ">Cálculos Trabalhistas</p>
+        <p class="font-poppins cor-0">Reclamação Trabalhista</p>
+        <p class="font-poppins cor-0">Ações Indenizatórias</p>
       </li>
       <li data-anime="scroll-up">
         <img src="icons/icon-balance.png" alt="icon">
-        <h1 class="font-poppins cor-4">Tributário</h1>
-        <p class="font-poppins cor-0 ">Análise de incentivos fiscais (obter incentivos fiscais)</p>
-        <p class="font-poppins cor-0 ">Assessoria em procedimentos de fiscalização</p>
-        <p class="font-poppins cor-0">Defesas administrativas</p>
-        <p class="font-poppins cor-0">Planejamento tributário</p>
+        <h1 class="font-poppins cor-4">Administrativo</h1>
+        <p class="font-poppins cor-0 ">Demandas envolvendo Concursos Públicos</p>
+        <p class="font-poppins cor-0 ">Defesas em PAD</p>
+        <p class="font-poppins cor-0">Sindicâncias</p>
+        <p class="font-poppins cor-0">Defesas Administrativas</p>
       </li>
       <li data-anime="scroll-up">
         <img src="icons/icon-balance.png" alt="icon">
@@ -111,19 +114,27 @@
       </li>
       <li data-anime="scroll-up">
         <img src="icons/icon-balance.png" alt="icon">
-        <h1 class="font-poppins cor-4">Cobrança Judicial</h1>
-        <p class="font-poppins cor-0 ">Cobrança de Condomínios e Empresas</p>
-        <p class="font-poppins cor-0 ">Recuperação de Valores</p>
-        <p class="font-poppins cor-0">Negociações de Dívidas</p>
-        <p class="font-poppins cor-0">Cobranças de Cheques e Duplicatas</p>
+        <h1 class="font-poppins cor-4">Imobiliário</h1>
+        <p class="font-poppins cor-0 ">Usucapião Extrajudicial</p>
+        <p class="font-poppins cor-0 ">Usucapião Judicial</p>
+        <p class="font-poppins cor-0">Regularização de Imóveis Urbanos e Rurais</p>
+        <p class="font-poppins cor-0">Contratos Imobiliários</p>
       </li>
       <li data-anime="scroll-up">
         <img src="icons/icon-balance.png" alt="icon">
-        <h1 class="font-poppins cor-4">Divórcio</h1>
-        <p class="font-poppins cor-0 ">Divorcio amigável em Cartório</p>
-        <p class="font-poppins cor-0 ">Divorcio Litigioso Judicial</p>
-        <p class="font-poppins cor-0">Partilha de bens</p>
-        <p class="font-poppins cor-0">Pensão Alimentícia para os filhos e/ou cônjuge</p>
+        <h1 class="font-poppins cor-4">Legislação de Trânsito</h1>
+        <p class="font-poppins cor-0 ">Defesa em autuação de bafômetro/alcoolemia</p>
+        <p class="font-poppins cor-0 ">Defesa em processo de cassação CNH</p>
+        <p class="font-poppins cor-0">Recuperação de PPD (permissão para dirigir)</p>
+        <p class="font-poppins cor-0">Defesa de multas em geral</p>
+      </li>
+      <li data-anime="scroll-up">
+        <img src="icons/icon-balance.png" alt="icon">
+        <h1 class="font-poppins cor-4">Direito do Consumidor</h1>
+        <p class="font-poppins cor-0 ">Ações indenizatórios</p>
+        <p class="font-poppins cor-0 ">Assessoria à empresas</p>
+        <p class="font-poppins cor-0">Revisão de contratos bancários</p>
+        <p class="font-poppins cor-0">Demais ações consumeristas</p>
       </li>
     </ul>
   </section>
