--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
           <div class="grid-colum-2"><img src="images/estagiaria.jpeg" data-anime="scroll-up" alt="estagiária"></div>
         </li>
 
-        
+
         <li>
           <div><img src="images/recepcionista.jpeg" data-anime="scroll-up" alt="recepcionista"></div>
           <div class="equipe-advg-conteudo" data-anime="scroll-right">
@@ -316,35 +316,41 @@
     <div class="faq-conteudo container" id="faq">
       <h1 class="font-poppins cor-1">Perguntas Frequentes</h1>
       <dl class="faq-lista">
-        <dt class="dt-pergunta font-montserrat cor-6" data-faq="pergunta">Como são determinadas as circunstâncias <br>
-          agravantes e atenuantes em um julgamento criminal?
+        <dt class="dt-pergunta font-montserrat cor-6" data-faq="pergunta">Benefício de Prestação Continuada (BPC-LOAS) é
+          aposentadoria?
         </dt>
-        <dd class="dd-resposta font-poppins cor-1">Refere-se ao processo pelo qual o juiz ou júri considera fatores
-          adicionais que podem aumentar (agravantes) ou reduzir (atenuantes) a gravidade de um crime durante o
-          julgamento.</dd>
+        <dd class="dd-resposta font-poppins cor-1">Não. o BPC-LOAS é um benefício que integra a política de assistência
+          social e se destina as pessoas que encontram-se em extrema vulnerabilidade social. Portanto, não é
+          aposentadoria. <br>
+          Requisitos para a concessão: <br>
+          a) Ser pessoa com deficiência ou idoso(a) com 65 anos de idade <br>
+          b) Possuir renda familiar mensal abaixo de 1/4 do salário-mínimo <br>
+          Limitações: <br>
+          a) Não possui direito ao 13º salário <br>
+          b) Não gera pensão por morte <br>
+          c) Os benefícios previdenciários recebidos pelos demais <br> componentes do grupo familiar, entram no cálculo
+          da
+          renda.
+        </dd>
 
-        <dt class="dt-pergunta font-montserrat cor-6" data-faq="pergunta">Qual é a diferença entre aposentadoria <br>
-          por tempo de contribuição e aposentadoria por invalidez?</dt>
-        <dd class="dd-resposta font-poppins"> a aposentadoria por tempo de contribuição está relacionada ao tempo de
-          serviço do trabalhador, enquanto a aposentadoria por invalidez é voltada para aqueles que não podem mais
-          trabalhar devido a problemas de saúde. A primeira depende do cumprimento de requisitos de contribuição,
-          enquanto a segunda se baseia em comprovação de incapacidade.</dd>
+        <dt class="dt-pergunta font-montserrat cor-6" data-faq="pergunta">Trabalho sem carteira assinada, posso entrar
+          na Justiça para cobrar meus direitos?</dt>
+        <dd class="dd-resposta font-poppins">Sim, você pode entrar na justiça para cobrar seus direitos, mesmo sem
+          carteira assinada. É possível solicitar o reconhecimento do vínculo empregatício e o pagamento de verbas como
+          salário, férias, 13º, FGTS e outros direitos previstos por lei. Porém, será necessário apresentar provas, como
+          mensagens, e-mails, testemunhas ou qualquer outro documento que demonstre a relação de trabalho.
+        </dd>
 
-        <dt class="dt-pergunta font-montserrat cor-6" data-faq="pergunta">Quais são os direitos garantidos aos
-          trabalhadores <br> em caso de demissão sem justa causa?</dt>
-        <dd class="dd-resposta font-poppins">Os direitos garantidos aos trabalhadores em caso de demissão sem justa
-          causa visam proporcionar uma rede de segurança financeira e facilitar a transição para um novo emprego. É
-          importante que tanto empregadores quanto empregados estejam cientes desses direitos para garantir o
-          cumprimento da legislação trabalhista vigente. Se tiver mais dúvidas ou precisar de informações adicionais,
-          sinta-se à vontade para perguntar!.</dd>
+        <dt class="dt-pergunta font-montserrat cor-6" data-faq="pergunta">Quanto tempo uma pessoa pode ficar presa por
+          prisão preventiva?</dt>
+        <dd class="dd-resposta font-poppins">Não se tem um prazo definido. O tempo de prisão preventiva vai depender da
+          presença de alguns requisitos existentes no caso em concreto. Por isso, aconselhável está sempre acompanhado
+          de um advogado (a) criminal para que possa melhor analisar a situação, e tentar minimizar o máximo o tempo de
+          prisão cautelar.</dd>
 
-        <dt class="dt-pergunta font-montserrat cor-6" data-faq="pergunta">Como é feita a partilha de bens em um
-          divórcio <br> consensual e litigioso?</dt>
-        <dd class="dd-resposta font-poppins">A partilha de bens em um divórcio pode variar significativamente dependendo
-          do tipo de divórcio (consensual ou litigioso) e do regime de bens adotado no casamento. Enquanto o divórcio
-          consensual oferece uma abordagem mais amigável e flexível, o divórcio litigioso pode ser necessário quando há
-          disputas significativas entre as partes. Em ambos os casos, é essencial contar com orientação legal adequada
-          para assegurar que os direitos de todos os envolvidos sejam respeitados.</dd>
+        <dt class="dt-pergunta font-montserrat cor-6" data-faq="pergunta">O pai pode exigir a guarda compartilhada para
+          reduzir o valor da pensão?</dt>
+        <dd class="dd-resposta font-poppins">Não. A guarda compartilhada não elimina ou reduz automaticamente a obrigação de pagar pensão, que é calculada com base nas necessidades da criança e nas condições financeiras de cada genitor.</dd>
       </dl>
     </div>
   </section>
@@ -381,21 +387,21 @@
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d986.6990846883765!2d-37.0598041413136!3d-8.421652099968767!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7a81bd4b9cf407f%3A0x83cfa429ae68458d!2sCARLOS%20AR%C3%81UJO%20ADVOCACIA!5e0!3m2!1spt-BR!2sbr!4v1721342185079!5m2!1spt-BR!2sbr"
             width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe>
-            <h3 class="font-roboto">Escritório Arcoverde</h3>
-            <ul>
-              <li>
-                <p class="font-roboto icon-endereco">R. Francisco Leonardo Filho, 401</p>
-              </li>
-              <li>
-                <p class="font-roboto arcoverde">Arcoverde-PE</p>
-              </li>
-              <li>
-                <p class="font-roboto icon-cidade">CEP 56509-240</p>
-              </li>
-              <li>
-                <p class="font-roboto icon-tel"><a href="tel:+5587999066958">(87)99906-6958</a></p>
-              </li>
-            </ul>
+          <h3 class="font-roboto">Escritório Arcoverde</h3>
+          <ul>
+            <li>
+              <p class="font-roboto icon-endereco">R. Francisco Leonardo Filho, 401</p>
+            </li>
+            <li>
+              <p class="font-roboto arcoverde">Arcoverde-PE</p>
+            </li>
+            <li>
+              <p class="font-roboto icon-cidade">CEP 56509-240</p>
+            </li>
+            <li>
+              <p class="font-roboto icon-tel"><a href="tel:+5587999066958">(87)99906-6958</a></p>
+            </li>
+          </ul>
         </div>
       </div>
     </div>
