--- a/index.html
+++ b/index.html
@@ -322,13 +322,13 @@
         <dd class="dd-resposta font-poppins cor-1">Não. o BPC-LOAS é um benefício que integra a política de assistência
           social e se destina as pessoas que encontram-se em extrema vulnerabilidade social. Portanto, não é
           aposentadoria. <br>
-          Requisitos para a concessão: <br>
-          a) Ser pessoa com deficiência ou idoso(a) com 65 anos de idade <br>
-          b) Possuir renda familiar mensal abaixo de 1/4 do salário-mínimo <br>
-          Limitações: <br>
-          a) Não possui direito ao 13º salário <br>
-          b) Não gera pensão por morte <br>
-          c) Os benefícios previdenciários recebidos pelos demais <br> componentes do grupo familiar, entram no cálculo
+          <span class="span-resposta">Requisitos para a concessão:</span> <br>
+          <span class="span-requetios-direitos">a)</span> Ser pessoa com deficiência ou idoso(a) com 65 anos de idade <br>
+          <span class="span-requetios-direitos">b)</span> Possuir renda familiar mensal abaixo de 1/4 do salário-mínimo <br>
+          <span class="span-resposta">Limitações:</span> <br>
+          <span class="span-requetios-direitos">a)</span> Não possui direito ao 13º salário <br>
+          <span class="span-requetios-direitos">b)</span> Não gera pensão por morte <br>
+          <span class="span-requetios-direitos">c)</span> Os benefícios previdenciários recebidos pelos demais <br> componentes do grupo familiar, entram no cálculo
           da
           renda.
         </dd>
