--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
     </div>
     <div class="footer-creditos container">
       <p class="font-montserrat cor-0">© 2024 Carlos Araújo Advocacia - Direitos Reservados <br> Desenvolvido por
-        Leonardo Campos.</p>
+        <a href="https://www.instagram.com/leonardoc_777/" target="_blank" class="footer-credito">Leonardo Campos</a>.</p>
     </div>
   </footer>
   <script type="module" src="./js/script.js"></script>
