--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
   <section class="escritorio-bg" id="escritorio">
     <div class="escritorio-conteudo container">
-      <div><img src="images/escritorio-1.jpeg" alt="escritorio" data-anime="scroll-left"></div>
+      <div><img src="images/escritorio-buique.jpeg" alt="escritorio" data-anime="scroll-left"></div>
       <div data-anime="scroll-right">
         <p class="font-montserrat cor-3">Escritório</p>
         <h1 class="font-poppins">Bem-vindo a Carlos Araújo Advocacia</h1>
