--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500;700;900&display=swap" rel="stylesheet">
   <link rel="shortcut icon" href="icons/logo-4.ico.jpg" type="image/x-icon">
-  <link rel="stylesheet" href="estilos/style.css">
+  <link rel="stylesheet" href="estilos/style.min.css">
   <script>document.documentElement.className += ' js';</script>
   <meta name="description" content="Mais de 10 anos defendendo seus direitos com respeito e transparência">
   <title>Carlos Araújo-Advocacia</title>
@@ -102,14 +102,6 @@
         <p class="font-poppins cor-0 ">Defesas em PAD</p>
         <p class="font-poppins cor-0">Sindicâncias</p>
         <p class="font-poppins cor-0">Defesas Administrativas</p>
-      </li>
-      <li data-anime="scroll-up">
-        <img src="icons/icon-balance.png" alt="icon">
-        <h1 class="font-poppins cor-4">Empresarial</h1>
-        <p class="font-poppins cor-0 ">Constituição da empresa</p>
-        <p class="font-poppins cor-0 ">Reestruturação Societária</p>
-        <p class="font-poppins cor-0">Resolução de conflitos entre os sócios</p>
-        <p class="font-poppins cor-0">Criação de estruturas de proteção patrimonial</p>
       </li>
       <li data-anime="scroll-up">
         <img src="icons/icon-balance.png" alt="icon">
