--- a/index.html
+++ b/index.html
@@ -136,6 +136,14 @@
         <ul class="container-carrosel">
           <img class="img-carrosel" src="images/escritorio-buique.jpeg" alt="escritorio" data-anime="scroll-left">
           <img class="img-carrosel" src="images/escritorio-arcoverde.jpeg" alt="escritorio" data-anime="scroll-left">
+          <img class="img-carrosel" src="images/escritorio-1.jpg" alt="escritorio" data-anime="scroll-left">
+          <img class="img-carrosel" src="images/escritorio-6.jpg" alt="escritorio" data-anime="scroll-left">
+          <img class="img-carrosel" src="images/escritorio-7.jpg" alt="escritorio" data-anime="scroll-left">
+          <img class="img-carrosel" src="images/escritorio-5.jpg" alt="escritorio" data-anime="scroll-left">
+          <img class="img-carrosel" src="images/escritorio-8.jpg" alt="escritorio" data-anime="scroll-left">
+          <img class="img-carrosel" src="images/escritorio-2.jpg" alt="escritorio" data-anime="scroll-left">
+          <img class="img-carrosel" src="images/escritorio-3.jpg" alt="escritorio" data-anime="scroll-left">
+          <img class="img-carrosel" src="images/escritorio-4.jpg" alt="escritorio" data-anime="scroll-left">
         </ul>
       </div>
       <div data-anime="scroll-right">
@@ -237,13 +245,13 @@
         </li>
 
         <li>
-          <div class=" equipe-advg-conteudo-colum-2" data-anime="scroll-down">
-            <h1 class="font-poppins cor-1">Dr. Jackson Albuquerque</h1>
-            <span class="span-oab2 font-poppins cor-1">OAB/PE 65.937</span>
-            <p class="font-poppins">Área de atuação: <span class="advg-atuacao"><br>Direito Civil <br>Legislação de
-                Trânsito <br>Direito Imobiliário</span></p>
+          <div class="equipe-advg-conteudo-colum-2" data-anime="scroll-down">
+            <h1 class="font-poppins cor-1">Dra. Sheyla Almeida</h1>
+            <span class="span-oab2 font-poppins cor-1">OAB/PE 65.109</span>
+            <p class="font-poppins">Área de atuação: <span class="advg-atuacao"><br>Direito Civil <br> Direito
+                Trabalhista</span></p>
             <div class="contato-pessoal-arcoverde">
-              <p class="font-montserrat">Arcoverde</p>
+              <p class="font-montserrat">Buíque</p>
               <a href="https://wa.me/5587999066958" target="_blank"><img src="icons/icon-zap-5.png" alt="zap"></a>
               <a href="https://www.instagram.com/carlosaraujoadv.arcoverde/" target="_blank"><img
                   src="icons/icon-instagram-5.png" alt="instagram"></a>
@@ -251,29 +259,12 @@
                   alt="email"></a>
             </div>
           </div>
-          <div class="grid-colum-2"><img src="images/advg4-teste.jpeg" data-anime="scroll-up" alt="advogado"></div>
+          <div class="grid-colum-2"><img src="images/advg5.jpeg" data-anime="scroll-up" alt="advogado"></div>
         </li>
 
         <li>
-          <div><img src="images/advg5.jpeg" data-anime="scroll-up" alt="advogado"></div>
-          <div class="equipe-advg-conteudo" data-anime="scroll-right">
-            <h1 class="font-poppins cor-1">Dra. Sheyla Almeida</h1>
-            <span class="span-oab2 font-poppins cor-1">OAB/PE 65.109</span>
-            <p class="font-poppins">Área de atuação: <span class="advg-atuacao"><br>Direito Civil <br> Direito
-                Trabalhista</span></p>
-            <div class="contato-pessoal-buique">
-              <p class="font-montserrat">Buíque</p>
-              <a href="https://wa.me/5587981740303" target="_blank"><img src="icons/icon-zap-5.png" alt="zap"></a>
-              <a href="https://www.instagram.com/carlosaraujo_advocacia/" target="_blank"><img
-                  src="icons/icon-instagram-5.png" alt="instagram"></a>
-              <a href="mailto:contato@advaraujo.adv.br" target="_blank"><img src="icons/icon-email-2.png"
-                  alt="email"></a>
-            </div>
-          </div>
-        </li>
-
-        <li>
-          <div class=" equipe-advg-conteudo-colum-2" data-anime="scroll-down">
+          <div><img src="images/estagiaria.jpeg" data-anime="scroll-up" alt="estagiária"></div>
+          <div class=" equipe-advg-conteudo" data-anime="scroll-right">
             <h1 class="font-poppins cor-1">Ellen Nunes</h1>
             <p class="font-poppins">Estagiária.</p>
             <div class="contato-pessoal-buique">
@@ -285,13 +276,11 @@
                   alt="email"></a>
             </div>
           </div>
-          <div class="grid-colum-2"><img src="images/estagiaria.jpeg" data-anime="scroll-up" alt="estagiária"></div>
         </li>
 
 
         <li>
-          <div><img src="images/recepcionista.jpeg" data-anime="scroll-up" alt="recepcionista"></div>
-          <div class="equipe-advg-conteudo" data-anime="scroll-right">
+          <div class="equipe-advg-conteudo-colum-2" data-anime="scroll-down">
             <h1 class="font-poppins cor-1">Vitória Couto</h1>
             <p class="font-poppins">Secretária Administrativa.</p>
             <div class="contato-pessoal-buique">
@@ -302,6 +291,8 @@
               <a href="mailto:contato@advaraujo.adv.br" target="_blank"><img src="icons/icon-email-2.png"
                   alt="email"></a>
             </div>
+          </div>
+          <div class="grid-colum-2"><img src="images/recepcionista.jpeg" data-anime="scroll-up" alt="recepcionista">
           </div>
         </li>
       </ul>
@@ -319,12 +310,15 @@
           social e se destina as pessoas que encontram-se em extrema vulnerabilidade social. Portanto, não é
           aposentadoria. <br>
           <span class="span-resposta">Requisitos para a concessão:</span> <br>
-          <span class="span-requetios-direitos">a)</span> Ser pessoa com deficiência ou idoso(a) com 65 anos de idade <br>
-          <span class="span-requetios-direitos">b)</span> Possuir renda familiar mensal abaixo de 1/4 do salário-mínimo <br>
+          <span class="span-requetios-direitos">a)</span> Ser pessoa com deficiência ou idoso(a) com 65 anos de idade
+          <br>
+          <span class="span-requetios-direitos">b)</span> Possuir renda familiar mensal abaixo de 1/4 do salário-mínimo
+          <br>
           <span class="span-resposta">Limitações:</span> <br>
           <span class="span-requetios-direitos">a)</span> Não possui direito ao 13º salário <br>
           <span class="span-requetios-direitos">b)</span> Não gera pensão por morte <br>
-          <span class="span-requetios-direitos">c)</span> Os benefícios previdenciários recebidos pelos demais <br> componentes do grupo familiar, entram no cálculo
+          <span class="span-requetios-direitos">c)</span> Os benefícios previdenciários recebidos pelos demais <br>
+          componentes do grupo familiar, entram no cálculo
           da
           renda.
         </dd>
@@ -346,7 +340,9 @@
 
         <dt class="dt-pergunta font-montserrat cor-6" data-faq="pergunta">O pai pode exigir a guarda compartilhada para
           reduzir o valor da pensão?</dt>
-        <dd class="dd-resposta font-poppins">Não. A guarda compartilhada não elimina ou reduz automaticamente a obrigação de pagar pensão, que é calculada com base nas necessidades da criança e nas condições financeiras de cada genitor.</dd>
+        <dd class="dd-resposta font-poppins">Não. A guarda compartilhada não elimina ou reduz automaticamente a
+          obrigação de pagar pensão, que é calculada com base nas necessidades da criança e nas condições financeiras de
+          cada genitor.</dd>
       </dl>
     </div>
   </section>
@@ -427,7 +423,8 @@
     </div>
     <div class="footer-creditos container">
       <p class="font-montserrat cor-0">© 2024 Carlos Araújo Advocacia - Direitos Reservados <br> Desenvolvido por
-        <a href="https://www.instagram.com/leonardoc_777/" target="_blank" class="footer-credito">Leonardo Campos</a>.</p>
+        <a href="https://www.instagram.com/leonardoc_777/" target="_blank" class="footer-credito">Leonardo Campos</a>.
+      </p>
     </div>
   </footer>
   <script type="module" src="./js/script.js"></script>
